# small-fem-solver

./: .gitignore  LICENSE  electro_static_potential.py  element.py  extract_python_version.py  inhomogenous_bcs.py  meshing.py  meshing_demo.py  pyproject.toml  runner.py  simple_sinusodial_solution.py  solving.py  space.py  visual.py  wave_equation.py
.github/workflows/: build_and_test.yml
src/examples/: electro_static_potential.py  inhomogenous_bcs.py  meshing_demo.py  simple_sinusodial_solution.py  wave_equation.py
src/pyfemsolver/: runner1.py  solving.py  space.py  test.py  visual.py
src/pyfemsolver/examples/: electro_static_potential.py  electrostatic_potential.py  inhomogenous_bcs.py  meshing_demo.py  shape_viewer.py  simple_sinusodial_solution.py  simple_sinusoidal_solution.py  simple_sinusoidal_solution_with_neumann.py  wave_equation.py  wave_equation_two_domains.py
src/pyfemsolver/solverlib/: coefficientfunction.py  element.py  elementtransformation.py  forms.py  geometry.py  integrationrules.py  integrators.py  meshing.py  polynomials.py  runner.py  runner1.py  solving.py  space.py
src/pyfemsolver/visual/: visual.py
tests/unit_tests/: test_demo.py  test_element.py  test_elementtransformation.py  test_integrationrules.py  test_polynomials.py
