[project]
name = "pyfemsolver"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small, simple fem solver for H1 problems"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
  "numpy>=2.3.5",
  "matplotlib>=3.10.7",
  "scipy>=1.16.3"
]

[dependency-groups]
build = [
    "build>=1.3.0"
]
test = [
    "pytest >= 8.2.0",
    "pytest-cov >= 7.0",
    "pytest-html-plus>=0.4.4"
]
lint = [
    "black>=25.11.0",
    "pylint>=4.0.3"
]


[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
electro_static_potential = "examples.electro_static_potential:main"
inhomogenous_bcs = "examples.inhomogenous_bcs:main"
meshing_demo = "examples.meshing_demo:main"
simple_sinusodial_solution = "examples.simple_sinusodial_solution:main"
wave_equation = "examples.wave_equation:main"


[tool.pytest.ini_options]
testpaths =  ["tests"]

[tool.black]
line-length = 145

[tool.pylint.format]
max-line-length = 145

[tool.pylint.basic]
# Allow specific variable names
good-names = ["X",
              "Y",
              "X_t",
              "Y_t",
              "E",
              "J",
              "Jinv",
              "detJ",
              "t",
]